--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -10,7 +10,7 @@
             <p class="subtitle is-4">{{ page.subtitle }}<p>
             {% if page.hero_link %}
                 <div class="my-4">
-                    <a href="{{ page.hero_link | relative_url }}" class="button is-info is-large">
+                    <a href="{{ page.hero_link | relative_url }}" class="button is-link is-normal is-hover has-text-black has-text-weight-bold">
                         {{- page.hero_link_text -}}
                     </a>
                 </div>
