--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -11,7 +11,7 @@
             {% if page.hero_link %}
                 <div class="my-4">
                     <a href="{{ page.hero_link | relative_url }}" class="button is-link is-normal is-hover has-text-black has-text-left" {{ page.hero_link_style }}>
-                        {{- page.hero_link_text -}}
+                        {{ page.hero_link_text }}
                     </a>
                 </div>
             {% endif %}
