--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -135,3 +135,25 @@ html::after {
   /* Using filter() to make the button brighter on hover */
   filter: brightness(125%);
 }
+
+
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+  50% {
+    transform: scale(0.95);
+    /* Add a subtle inset shadow to make it look like it's pressing down */
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+}
+
+.animated-now {
+  animation: pulse 1s ease-in-out forwards;
+}
