defer and preload scripts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
     <link rel="alternate" hreflang="{{ lang }}" {% static_href %}href="{{ hreflang_url }}"{% endstatic_href %}>
     {%- endfor %}
 
+    <link rel="preload" href="{{ site.baseurl }}/assets/css/app.css" as="style">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/app.css">
     <link
         rel="shortcut icon"
@@ -32,9 +33,11 @@
         {% endif %}
     >
 
+    <link rel="preconnect" href="https://unpkg.com">
     <script defer src="https://unpkg.com/alpinejs@3.9.0/dist/cdn.min.js"></script>
 
     {% unless site.hide_share_buttons %}
+        <link rel="preload" href="https://cdn.jsdelivr.net/npm/bulma-social@1/bin/bulma-social.min.css" as="style">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-social@1/bin/bulma-social.min.css">
     {% endunless %}
 
