--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -1,39 +1,3 @@
-<!-- Start mtrcs code -->
-<script>
-  var _paq = window._paq = window._paq || [];
-  _paq.push(["setRequestMethod", "POST"]);
-  _paq.push(["disableCookies"]);
-  _paq.push(["deleteCookies"]);
-  _paq.push(["disableAlwaysUseSendBeacon"]);
-  _paq.push(["disableQueueRequest"]);
-  _paq.push(["setDocumentTitle", document.domain + ": " + document.title]);
-  _paq.push(["setCookieDomain", "*.set-outlooksignatures.com"]);
-  _paq.push(["setDomains", ["*.set-outlooksignatures.com"]]);
-  _paq.push(['enableHeartBeatTimer']);
-  _paq.push(['setLinkClasses', "mtrcs-external-link"]);
-  _paq.push(['trackPageView']);
-  _paq.push(['trackVisibleContentImpressions']);
-  _paq.push(['enableLinkTracking']);
-
-
-  (function () {
-    var u = "//mtrcs.set-outlooksignatures.com/";
-    _paq.push(["setTrackerUrl", u + "poop.php"]);
-    _paq.push(["setSiteId", "1"]);
-    var d = document, g = d.createElement("script"), s = d.getElementsByTagName("script")[0];
-    g.type = "text/javascript"; g.async = true; g.defer = true; g.src = u + "poop.js"; s.parentNode.insertBefore(g, s);
-  })();
-</script>
-
-<noscript>
-  <p><img referrerpolicy="no-referrer-when-downgrade"
-      src="//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&amp;bots=1&amp;rec=1&amp;action_name=page_view&amp;url={{ site.url }}{{ page.url | relative_url }}&amp;rand={{ "
-      now" | date: "%s" }}&amp;apiv=1" style="border:0;" alt="" /></p>
-</noscript>
-<!-- End mtrcs code -->
-
-
-<!-- Mark internal and external links -->
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const links = document.querySelectorAll("a[href]");
@@ -74,34 +38,92 @@
     });
   });
 </script>
-<!-- End link modification code -->
 
-
-<!-- Add hash to language switcher links -->
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    // Define a function to handle the link updates
-    const updateLanguageLinks = () => {
-      const currentHash = window.location.hash;
-      const languageLinks = document.querySelectorAll('a[data-base-url]');
-
-      languageLinks.forEach(link => {
-        const baseHref = link.getAttribute('data-base-url');
-        link.href = baseHref + currentHash;
-      });
-    };
-
-    // Initial call when the DOM is ready
-    updateLanguageLinks();
-
-    // Listen for hash changes and update the links again
-    window.addEventListener('hashchange', updateLanguageLinks);
+  document.addEventListener('DOMContentLoaded', function () {
+    document.querySelectorAll('p + ul, p + ol').forEach(list => {
+      const prev = list.previousElementSibling;
+      if (prev && prev.tagName === 'P') {
+        prev.style.marginBottom = '0';
+        list.style.marginTop = '0';
+      }
+    });
   });
 </script>
-<!-- End language switcher code -->
 
 
-<!-- Notification delete button code -->
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const headings = document.querySelectorAll("h1, h2, h3, h4, h5, h6");
+
+    headings.forEach(function (heading) {
+      // Check if the heading already has an ID, which should be the case
+      // after the Jekyll plugin runs.
+      if (heading.id) {
+        const anchor = document.createElement("a");
+        anchor.href = `#${heading.id}`;
+        anchor.className = "anchor-link";
+        anchor.innerHTML = "🔗"; // Or use an SVG for better styling
+
+        // Insert the anchor link as the first child of the heading
+        heading.insertBefore(anchor, heading.firstChild);
+      }
+    });
+  });
+</script>
+
+
+<!-- Start mtrcs code -->
+<script>
+  var _paq = window._paq = window._paq || [];
+  _paq.push(["setRequestMethod", "POST"]);
+  _paq.push(["disableCookies"]);
+  _paq.push(["deleteCookies"]);
+  _paq.push(["disableAlwaysUseSendBeacon"]);
+  _paq.push(["disableQueueRequest"]);
+  _paq.push(["setDocumentTitle", document.domain + ": " + document.title]);
+  _paq.push(["setCookieDomain", "*.set-outlooksignatures.com"]);
+  _paq.push(["setDomains", ["*.set-outlooksignatures.com"]]);
+  _paq.push(['enableHeartBeatTimer']);
+  _paq.push(['setLinkClasses', "mtrcs-external-link"]);
+  _paq.push(['trackPageView']);
+  _paq.push(['trackVisibleContentImpressions']);
+  _paq.push(['enableLinkTracking']);
+
+
+  (function () {
+    var u = "//mtrcs.set-outlooksignatures.com/";
+    _paq.push(["setTrackerUrl", u + "poop.php"]);
+    _paq.push(["setSiteId", "1"]);
+    var d = document, g = d.createElement("script"), s = d.getElementsByTagName("script")[0];
+    g.type = "text/javascript"; g.async = true; g.defer = true; g.src = u + "poop.js"; s.parentNode.insertBefore(g, s);
+  })();
+</script>
+
+<noscript>
+  <p><img referrerpolicy="no-referrer-when-downgrade"
+      src="//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&amp;bots=1&amp;rec=1&amp;action_name=page_view&amp;url={{ site.url }}{{ page.url | relative_url }}&amp;rand={{ "
+      now" | date: "%s" }}&amp;apiv=1" style="border:0;" alt="" /></p>
+</noscript>
+<!-- End mtrcs code -->
+
+
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const languageLinks = document.querySelectorAll('a[data-base-url]');
+    const currentAnchor = window.location.hash;
+
+    if (currentAnchor) {
+      languageLinks.forEach(link => {
+        const baseHref = link.getAttribute('data-base-url');
+        link.href = baseHref + currentAnchor;
+      });
+    }
+  });
+</script>
+
+
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     (document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
@@ -113,10 +135,7 @@
     });
   });
 </script>
-<!-- End notification delete button code -->
 
-
-<!-- Button animation code -->
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     const buttons = document.querySelectorAll('.button');
@@ -156,4 +175,3 @@
     animateSequence(); // Initial call to start the whole process
   });
 </script>
-<!-- End button animation code -->
