--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,19 +1,32 @@
-<section
-    class="hero {% if page.hero_height %} {{ page.hero_height }} {% else %} is-medium {% endif %} is-bold"
-    {% if page.hero_image %}
-        style="background: url('{{ page.hero_image }}') no-repeat center center; background-size: cover;"
-    {% endif %}
->
+<section class="hero {% if page.hero_height %} {{ page.hero_height }} {% else %} is-medium {% endif %} is-bold" {% if
+    page.hero_image %} style="background: url('{{ page.hero_image }}') no-repeat center center; background-size: cover;"
+    {% endif %}>
     <div class="hero-body {% if page.hero_darken %} hero-darken {% endif %}">
         <div class="container">
             <h1 class="title is-2">{{ page.title }}</h1>
-            <p class="subtitle is-4">{{ page.subtitle }}<p>
-            {% if page.hero_link %}
-                <div class="my-4">
-                    <a href="{{ page.hero_link | relative_url }}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link_style }}>
-                        {{- page.hero_link_text -}}
-                    </a>
-                </div>
+            <p class="subtitle is-4">{{ page.subtitle }}
+            <p>
+                {% if page.hero_link %}
+            <div class="my-4">
+                <a href="{{ page.hero_link | relative_url }}"
+                    class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link_style }}>
+                    {{- page.hero_link_text -}}
+                </a>
+                {% if page.hero_link2 %}
+                <a href="{{ page.hero_link2 | relative_url }}"
+                    class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link2_style
+                    }}>
+                    {{- page.hero_link2_text -}}
+                </a>
+                {% endif %}
+                {% if page.hero_link3 %}
+                <a href="{{ page.hero_link3 | relative_url }}"
+                    class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link3_style
+                    }}>
+                    {{- page.hero_link3_text -}}
+                </a>
+                {% endif %}
+            </div>
             {% endif %}
         </div>
     </div>
