--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -136,21 +136,21 @@ html::after {
   filter: brightness(125%);
 }
 
-
-
 @keyframes pulse {
   0% {
     transform: scale(1);
     box-shadow: none;
+    filter: brightness(100%); /* Start with no brightness change */
   }
   50% {
     transform: scale(0.95);
-    /* Add a subtle inset shadow to make it look like it's pressing down */
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    filter: brightness(125%); /* Apply the brightness at the midpoint */
   }
   100% {
     transform: scale(1);
     box-shadow: none;
+    filter: brightness(100%); /* Return to normal brightness */
   }
 }
 
