enable download tracking

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -88,8 +88,9 @@
   _paq.push(["setDomains", ["*.set-outlooksignatures.com"]]);
   _paq.push(['enableHeartBeatTimer']);
   _paq.push(['setLinkClasses', ["mtrcs-external-link", "mtrcs-internal-link"]]);
+  _paq.push(['setDownloadClasses', ["mtrcs-download"]]);  
   _paq.push(['trackPageView']);
-  _paq.push(['trackVisibleContentImpressions']);
+  _paq.push(['trackVisibleContentImpressions', true]);
   _paq.push(['enableLinkTracking']);
 
 
