--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -1,3 +1,4 @@
+<!-- Open external links in new tab, mark external links, add link class for matomo -->
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const links = document.querySelectorAll("a[href]");
@@ -42,6 +43,7 @@
 </script>
 
 
+<!-- Add anchor to headings -->
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const headings = document.querySelectorAll("h1, h2, h3, h4, h5, h6");
@@ -63,7 +65,7 @@
 </script>
 
 
-<!-- Start mtrcs code -->
+<!-- mtrcs js code -->
 <script>
   var _paq = window._paq = window._paq || [];
   _paq.push(["setRequestMethod", "POST"]);
@@ -82,26 +84,80 @@
   _paq.push(['enableLinkTracking']);
 
 
-  (function () {
-    var u = "//mtrcs.set-outlooksignatures.com/";
-    _paq.push(["setTrackerUrl", u + "poop.php"]);
-    _paq.push(["setSiteId", "1"]);
-    var d = document, g = d.createElement("script"), s = d.getElementsByTagName("script")[0];
-    g.type = "text/javascript"; g.async = true; g.defer = true; g.src = u + "poop.js"; s.parentNode.insertBefore(g, s);
-  })();
+  (
+    function () {
+      var u = "//mtrcs.set-outlooksignatures.com/";
+      _paq.push(["setTrackerUrl", u + "poop.php"]);
+      _paq.push(["setSiteId", "1"]);
+      var d = document;
+      g = d.createElement("script");
+      s = d.getElementsByTagName("script")[0];
+      g.type = "text/javascript";
+      g.async = true;
+      g.defer = true;
+      g.src = u + "poop.js";
+      s.parentNode.insertBefore(g, s);
+    }
+  )();
 </script>
 
+
+<!-- mtrcs no js code -->
 <noscript>
-  <p><img referrerpolicy="no-referrer-when-downgrade"
-      src="//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&amp;bots=1&amp;rec=1&amp;action_name=page_view&amp;url={{ site.url }}{{ page.url | relative_url }}&amp;rand={{ "
-      now" | date: "%s" }}&amp;apiv=1" style="border:0;" alt="" /></p>
+  <p>
+    <img referrerpolicy="no-referrer-when-downgrade"
+      src='//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&amp;bots=1&amp;rec=1&amp;action_name=page_view&amp;url={{ site.url }}{{ page.url | relative_url }}&amp;rand={{ "now" | date: "%s" }}&amp;apiv=1'
+      style="border:0;" alt="" />
+  </p>
 </noscript>
-<!-- End mtrcs code -->
 
 
-
+<!-- mtrcs youtube code -->
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
+  document.addEventListener('DOMContentLoaded', async () => {
+    const playerElement = document.getElementById('youtube-video-player');
+    if (playerElement) {
+      // Define the onYouTubeIframeAPIReady function before loading the script.
+      // The YouTube API will call this function automatically once it's loaded.
+      window.onYouTubeIframeAPIReady = () => {
+        // Create a new YT.Player object for the iframe with id="youtube-video-player"
+        window.player = new YT.Player('youtube-video-player', {
+          events: {
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      };
+
+      // This function is called by the YouTube API whenever the player's state changes.
+      function onPlayerStateChange(event) {
+        const videoTitle = "Set-OutlookSignatures Demo"; // Customize this
+        const currentTime = window.player.getCurrentTime();
+
+        if (event.data === YT.PlayerState.PLAYING) {
+          // Track when the video starts playing
+          _paq.push(['trackEvent', 'Video', 'Play', videoTitle, Math.round(currentTime)]);
+        } else if (event.data === YT.PlayerState.PAUSED) {
+          // Track when the video is paused
+          _paq.push(['trackEvent', 'Video', 'Pause', videoTitle, Math.round(currentTime)]);
+        } else if (event.data === YT.PlayerState.ENDED) {
+          // Track when the video ends
+          _paq.push(['trackEvent', 'Video', 'Ended', videoTitle, Math.round(currentTime)]);
+        }
+      }
+
+      // Dynamically create and append the script tag to the body.
+      // This is the key step that loads the script only when needed.
+      const script = document.createElement('script');
+      script.src = 'https://www.youtube.com/iframe_api';
+      document.body.appendChild(script);
+    }
+  });
+</script>
+
+
+<!-- Add html hash to language switcher links -->
+<script>
+  document.addEventListener('DOMContentLoaded', async () => {
     // Define a function to handle the link updates
     const updateLanguageLinks = () => {
       const currentHash = window.location.hash;
@@ -122,8 +178,9 @@
 </script>
 
 
+<!-- Code for delete button in notifications -->
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
+  document.addEventListener('DOMContentLoaded', async () => {
     (document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
       const $notification = $delete.parentNode;
 
@@ -134,8 +191,10 @@
   });
 </script>
 
+
+<!-- Button animation -->
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
+  document.addEventListener('DOMContentLoaded', async () => {
     const buttons = document.querySelectorAll('.button');
     const delayBetweenButtons = 400; // 0.2-second stagger
     const animationFrequency = 5000; // 4-second frequency for each button
@@ -154,6 +213,7 @@
 </script>
 
 
+<!-- Scrolling customer images banner -->
 <script>
   document.addEventListener('DOMContentLoaded', async () => {
     const track = document.querySelector('.scrolling-track');
@@ -275,43 +335,39 @@
   });
 </script>
 
+
+<!-- Update download links to latest release of Set-OutlookSignatures -->
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const playerElement = document.getElementById('youtube-video-player');
-    if (playerElement) {
-      // Define the onYouTubeIframeAPIReady function before loading the script.
-      // The YouTube API will call this function automatically once it's loaded.
-      window.onYouTubeIframeAPIReady = () => {
-        // Create a new YT.Player object for the iframe with id="youtube-video-player"
-        window.player = new YT.Player('youtube-video-player', {
-          events: {
-            'onStateChange': onPlayerStateChange
-          }
-        });
-      };
+  async function updateDownloadLink() {
+    const owner = 'Set-OutlookSignatures';
+    const repo = 'Set-OutlookSignatures';
+    const repoURL = `https://api.github.com/repos/${owner}/${repo}/releases/latest`;
 
-      // This function is called by the YouTube API whenever the player's state changes.
-      function onPlayerStateChange(event) {
-        const videoTitle = "Set-OutlookSignatures Demo"; // Customize this
-        const currentTime = window.player.getCurrentTime();
-
-        if (event.data === YT.PlayerState.PLAYING) {
-          // Track when the video starts playing
-          _paq.push(['trackEvent', 'Video', 'Play', videoTitle, Math.round(currentTime)]);
-        } else if (event.data === YT.PlayerState.PAUSED) {
-          // Track when the video is paused
-          _paq.push(['trackEvent', 'Video', 'Pause', videoTitle, Math.round(currentTime)]);
-        } else if (event.data === YT.PlayerState.ENDED) {
-          // Track when the video ends
-          _paq.push(['trackEvent', 'Video', 'Ended', videoTitle, Math.round(currentTime)]);
-        }
+    try {
+      const response = await fetch(repoURL);
+      if (!response.ok) {
+        throw new Error(`GitHub API request failed with status: ${response.status}`);
       }
 
-      // Dynamically create and append the script tag to the body.
-      // This is the key step that loads the script only when needed.
-      const script = document.createElement('script');
-      script.src = 'https://www.youtube.com/iframe_api';
-      document.body.appendChild(script);
+      const data = await response.json();
+      const firstAsset = data.assets[0];
+
+      if (firstAsset && firstAsset.browser_download_url) {
+        const downloadLinks = document.querySelectorAll('.sos-download-link');
+        if (downloadLinks.length > 0) {
+          downloadLinks.forEach(link => {
+            link.href = firstAsset.browser_download_url;
+          });
+        } else {
+          // console.warn('No elements with class "sos-download-link" found.');
+        }
+      } else {
+        console.error('No assets found for the latest release.');
+      }
+    } catch (error) {
+      console.error('Error fetching latest release:', error);
     }
-  });
+  }
+
+  document.addEventListener('DOMContentLoaded', updateDownloadLink);
 </script>
