--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -208,3 +208,10 @@ p:has(+ ul),
 p:has(+ ol) {
   margin-bottom: 0;
 }
+
+a.mtrcs-external-link::after {
+  content: "&nbsp;↗"; /* The icon you want to use */
+  font-size: 0.8em;
+  vertical-align: super;
+  margin-left: 0.2em;
+}
