--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -209,9 +209,21 @@ p:has(+ ol) {
   margin-bottom: 0;
 }
 
+/* Rule for links that are NOT buttons. This is the general case. */
 a.mtrcs-external-link::after {
-  content: "↗"; /* The icon you want to use */
+  content: "&nbsp;↗";
   font-size: 0.8em;
   vertical-align: super;
-  margin-left: 0.2em;
+}
+
+/*
+ * Rule for links that contain a button.
+ * This rule is more specific and will override the general rule
+ * when an <a> tag with the class 'mtrcs-external-link' has a
+ * button as a direct child.
+ */
+a.mtrcs-external-link > button::after {
+  content: "&nbsp;↗";
+  font-size: 0.8em;
+  vertical-align: super;
 }
