--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -209,9 +209,8 @@ p:has(+ ol) {
   margin-bottom: 0;
 }
 
-
 a.mtrcs-external-link::after {
   content: "\00A0↗";
   font-size: 0.8em;
-  vertical-align: super;
+  vertical-align: top;
 }
