--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,7 +7,7 @@
             <p class="subtitle is-4">{{ page.subtitle }}
             <p>
                 {% if page.hero_link %}
-            <div class="my-4">
+            <div class="buttons my-4">
                 <a href="{{ page.hero_link }}"
                     class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link_style }}>
                     {{- page.hero_link_text -}}
